# BIA_

./: .replit  README.md  app.py  auth_inmemory.py  pyproject.toml  replit.md  requirements.txt  supabase_store.py
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-BIA-Bio-energy-Intelligence-Application-0-Scope-Build-a-Streamlit-based-Python-demo--1755913969421_1755913969422.txt
bia_core/: __init__.py  data_io.py  eval.py  features.py  finance.py  maps.py  models.py  schemas.py  utils.py
data/curated/: city_stats.csv  costs.csv  facilities.csv  tariffs.csv
