[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pydeck>=0.9.1",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.48.1",
    "python-dateutil>=2.9.0.post0",
    "bcrypt>=4.3.0",
    "pyyaml>=6.0.2",
    "pandas>=2.3.2",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
]
